@@ -1,0 +1,14 @@
+<html>
+  <body>
+      <div id="breadcrumbs">
+          <span id="you-are-here">You are here</span>
+      </div>
+      <span id="date">2015-04-02</span>
+      <div id="source-content">
+          <article>
+              <h1>Title</h1>
+              <section>Description</section>
+          </article>
+      </div>
+  </body>
+</html>
