@@ -1,0 +1,6 @@
+<div id="related">
+    Document 2
+</div>
+<div id="portlet">
+    Portlet
+</div>
