@@ -1,0 +1,21 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <body>
+    <div id="source-content">
+      <div id="breadcrumbs">
+        <span id="you-are-here">You are here</span>
+      </div>
+      <article>
+        <h1>Title</h1>
+        <span id="date">2015-04-02</span>
+        <section>Description</section>
+        <div id="related">
+          Document 2
+        </div>
+      </article>
+    </div>
+    <div id="portlet">
+      Portlet
+    </div>
+  </body>
+</html>
