@@ -1,0 +1,6 @@
+<html>
+<body>
+  <div id="target-content"></div>
+  <div id="footer"></div>
+</body>
+</html>
