@@ -4,7 +4,8 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+* Allow content-to-content inclusion
+  [ebrehault]
 
 
 1.1.0 (2014-10-23)
